Finish the comment app

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
+appdirs==1.4.3
 certifi==2017.11.5
 chardet==3.0.4
 cycler==0.10.0
 Django==1.11.2
+django-cors-headers==2.1.0
+djangorestframework==3.7.3
+djangorestframework-jwt==1.11.0
 idna==2.6
 matplotlib==2.1.0
 numpy==1.13.3+mkl
 olefile==0.44
+packaging==16.8
 Pillow==4.3.0
+PyJWT==1.5.3
 pyparsing==2.2.0
 python-dateutil==2.6.1
 pytz==2017.3
